button corner fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ html {
 a {
   text-decoration: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 ul {
